--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "fs": "^0.0.1-security",
+    "gray-matter": "^4.0.3",
+    "marked": "^4.1.1",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
